# oxiz

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  PHASE_3.4_COMPLETION_REPORT.md  PROPERTY_TESTING.md  README.md  RELEASE_NOTES_0.1.3.md  TODO.md  beyond.md
bench/profile/: Cargo.toml
bench/regression/: Cargo.toml  README.md  baseline.json
bench/z3_parity/: Cargo.toml  METHODOLOGY.md  results.json  run_parity.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_quantifiers.rs  fuzz_smtlib_parser.rs  fuzz_solver.rs  fuzz_tactics.rs  fuzz_term_builder.rs  fuzz_theory_arithmetic.rs  fuzz_theory_array.rs  fuzz_theory_bitvector.rs
oxiz/: Cargo.toml  README.md
oxiz-c/: Cargo.toml  TODO.md  build.rs  cbindgen.toml
oxiz-c/src/: context.rs  error.rs  lib.rs  model.rs  solver.rs
oxiz-c/tests/: ffi_smoke.rs
oxiz-cli/: Cargo.toml  README.md  SCIRS2_POLICY.md  TODO.md
oxiz-cli/examples/: wasm_basic.mjs  wasm_bitvector.mjs  wasm_incremental.mjs  wasm_typescript.ts
oxiz-cli/src/: analysis.rs  cache.rs  checkpoint.rs  cicd.rs  dashboard.rs  dependency.rs  diagnostic.rs  dimacs.rs  distributed.rs  format.rs  interactive.rs  interpolate.rs  learning.rs  lsp.rs  main.rs  memory.rs  model_counter.rs  portfolio.rs  processor.rs  proof_checker.rs  server.rs  tptp.rs  tutorial.rs  unsat_core.rs  wasm_bindings.rs
oxiz-cli/tests/: benchmark.rs  cli_integration.rs  dashboard_perf.rs  smtlib_benchmarks.rs
oxiz-core/: Cargo.toml  README.md  TODO.md
oxiz-core/examples/: 01_basic_term_creation.rs  02_parsing_smtlib.rs  03_tactic_simplification.rs  04_rewriting_terms.rs  05_quantifier_elimination.rs  06_arena_allocation.rs  07_model_evaluation.rs  08_error_handling.rs  09_resource_limits.rs  10_unsat_core_extraction.rs
oxiz-core/src/: config.rs  diagnostics.rs  error.rs  error_context.rs  error_recovery.rs  error_utils.rs  interner.rs  lib.rs  literal.rs  lru_cache.rs  prelude.rs  profiling.rs  resource.rs  statistics.rs  unsat_core.rs
oxiz-core/tests/: aggressive_simplify_rules.rs  property_based.rs  qe_virtual_substitution.rs
oxiz-math/: Cargo.toml  README.md  TODO.md
oxiz-math/benches/: math_benchmarks.rs
oxiz-math/examples/: 01_linear_programming.rs  02_polynomial_operations.rs
oxiz-math/src/: algebraic_number.rs  bdd.rs  blas.rs  blas_ops.rs  delta_rational.rs  fast_rational.rs  grobner.rs  hilbert.rs  interior_point.rs  interval.rs  lib.rs  lp.rs  lp_core.rs  matrix.rs  mpfr.rs  polynomial.rs  prelude.rs  rational.rs  rational_function.rs  realclosure.rs  realclosure_advanced.rs  simplex.rs  simplex_parametric.rs  simplex_solver.rs
oxiz-math/tests/: edge_cases.rs  property_based_extended.rs
oxiz-ml/: Cargo.toml  README.md
oxiz-ml/benches/: ml_overhead.rs  prediction_accuracy.rs
oxiz-ml/src/: lib.rs
oxiz-ml/tests/: sat_integration.rs
oxiz-nlsat/: Cargo.toml  README.md  TODO.md
oxiz-nlsat/benches/: nlsat_benchmarks.rs
oxiz-nlsat/examples/: basic_solver.rs  multiple_variables.rs  nia_solver.rs  quadratic.rs
oxiz-nlsat/src/: assignment.rs  assumptions.rs  bound_propagation.rs  cad.rs  cad_optimization.rs  clause.rs  clause_tiers.rs  cutting_planes.rs  discriminant.rs  eval_cache.rs  evaluator.rs  explain.rs  grobner_preprocess.rs  inprocessing.rs  interval_set.rs  lib.rs  maxsat.rs  nia.rs  portfolio.rs  proof.rs  root_hints.rs  solver.rs  structure_analyzer.rs  subsumption.rs  theory_conflict.rs  vivification.rs  watched_literals.rs
oxiz-opt/: Cargo.toml  README.md  TODO.md
oxiz-opt/benches/: opt_benchmarks.rs
oxiz-opt/src/: context.rs  hybrid.rs  lib.rs  lns.rs  maxsat.rs  objective.rs  omt.rs  pareto.rs  pareto_enumerate.rs  pmres.rs  pmres_enhanced.rs  portfolio.rs  preprocess.rs  rc2_enhanced.rs  sls.rs  smtlib.rs  smtlib_commands.rs  sortmax.rs  totalizer.rs  wcnf.rs
oxiz-proof/: Cargo.toml  README.md  TODO.md
oxiz-proof/benches/: proof_benchmarks.rs
oxiz-proof/src/: builder.rs  carcara.rs  checker.rs  compress.rs  compression.rs  conversion.rs  coq.rs  coq_enhanced.rs  drat.rs  explanation.rs  fingerprint.rs  heuristic.rs  incremental.rs  isabelle.rs  isabelle_enhanced.rs  lazy.rs  lean.rs  lean_enhanced.rs  lib.rs  logging.rs  merge.rs  minimize.rs  parallel.rs  pattern.rs  premise.rs  proof.rs  quantifier.rs  recorder.rs  replay.rs  resolution.rs  simplify.rs  streaming.rs  template.rs  theory.rs  theory_combination.rs  transform.rs  traversal.rs  validation.rs  visualization.rs
oxiz-proof/tests/: theory_combination_proof.rs
oxiz-py/: Cargo.toml  PARITY.md  README.md  oxiz.pyi  pyproject.toml
oxiz-py/.cargo/: config.toml
oxiz-py/src/: builtins.rs  context.rs  lib.rs  optimizer.rs  results.rs  solver_py.rs  term.rs
oxiz-py/tests/: test_arrays.py  test_fp.py  test_quantifiers.py  test_strings.py  test_unsat_cores.py
oxiz-sat/: Cargo.toml  README.md  TODO.md
oxiz-sat/src/: activity.rs  agility.rs  allsat.rs  assumptions.rs  asymmetric_branching.rs  autotuning.rs  backbone.rs  benchmark.rs  big.rs  cardinality.rs  cce.rs  chb.rs  chrono.rs  chronological_backtrack.rs  clause.rs  clause_exchange.rs  clause_maintenance.rs  clause_pool.rs  clause_size_manager.rs  community.rs  community_partition.rs  config_presets.rs  cube.rs  cube_solver.rs  dimacs.rs  distillation.rs  drat_inprocessing.rs  dynamic_lbd.rs  dynamic_subsumption.rs  els.rs  extended_resolution.rs  gate.rs  gpu.rs  hyper_binary.rs  invariants.rs  lib.rs  literal.rs  local_search.rs  lookahead.rs  lrb.rs  (+31 more)
oxiz-sat/tests/: allocation_reduction.rs  external_branching.rs  profiling_pass.rs  property_based.rs  test_add_after_solve.rs  test_allsat_debug.rs  test_clause_add.rs  (+23 more)
oxiz-smtcomp/: .dockerignore  Cargo.toml  Dockerfile  README.md  TODO.md
oxiz-solver/: Cargo.toml  README.md  TODO.md
oxiz-spacer/: Cargo.toml  README.md  TODO.md
oxiz-theories/: Cargo.toml  README.md  TODO.md
oxiz-wasm/: .npmignore  BROWSER_TESTING.md  CDN_USAGE.md  Cargo.toml  MIGRATION.md  README.md  RELEASE_CHECKLIST.md  SCIRS2_POLICY.md  TODO.md  build.sh  deno.json  oxiz-wasm.d.ts  package.json  publish.sh  version-bump.sh
(+1015 files in other folders)
