[package]
name = "oxiz-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core AST, Sorts, and Traits for OxiZ SMT Solver"
keywords = ["smt", "ast", "logic"]
categories = ["algorithms", "data-structures"]

[dependencies]
# Always available (no_std compatible)
indexmap = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false, optional = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
num-rational = { workspace = true, default-features = false, features = ["num-bigint"] }
num-bigint = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }
num-integer = { workspace = true, default-features = false }
hashbrown.workspace = true
portable-atomic = { workspace = true }
portable-atomic-util = { workspace = true }
oxiz-math = { workspace = true, default-features = false }

# Optional (std-only)
lasso = { version = "0.7", optional = true, features = ["multi-threaded"] }
bumpalo = { workspace = true, features = ["collections"], optional = true }
winnow = { workspace = true, optional = true }
rhai = { version = "1.24", features = ["sync"], optional = true }
wide = { version = "1.2", optional = true }
rayon = { workspace = true, optional = true }
parking_lot = { version = "0.12", optional = true }

[features]
default = ["std"]
std = [
    "lasso",
    "bumpalo",
    "winnow",
    "rhai",
    "wide",
    "rayon",
    "parking_lot",
    "tracing",
    "tracing/std",
    "thiserror/std",
    "indexmap/std",
    "num-rational/std",
    "num-bigint/std",
    "num-traits/std",
    "num-integer/std",
    "rustc-hash/std",
    "oxiz-math/std",
]
arena = ["bumpalo"]
property-tests = []

[dev-dependencies]
proptest = { workspace = true }
