[package]
name = "oxiz-math"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Mathematical foundations for OxiZ SMT solver"
keywords = ["smt", "math", "simplex", "polynomial", "algebra"]
categories = ["algorithms", "mathematics"]

[dependencies]
num-rational.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true
smallvec.workspace = true
rustc-hash.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "math_benchmarks"
harness = false
