[package]
name = "oxiz-nlsat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Non-linear arithmetic solver for OxiZ (CAD-based)"
keywords = ["smt", "nlsat", "nonlinear", "arithmetic", "cad"]
categories = ["algorithms", "mathematics"]

[dependencies]
oxiz-core = { workspace = true, features = ["std"] }
oxiz-math = { workspace = true, features = ["std"] }
num-rational = { workspace = true, features = ["std"] }
num-bigint = { workspace = true, features = ["std"] }
num-traits = { workspace = true, features = ["std"] }
smallvec.workspace = true
rustc-hash = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
rayon.workspace = true
num_cpus.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "nlsat_benchmarks"
harness = false
