[package]
name = "oxiz-opt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optimization engine for OxiZ (MaxSMT, OMT)"
keywords = ["smt", "maxsmt", "optimization", "omt", "maxsat"]
categories = ["algorithms", "mathematics"]

[dependencies]
oxiz-core = { workspace = true, features = ["std"] }
oxiz-sat = { workspace = true, features = ["std"] }
oxiz-solver = { workspace = true, features = ["std"] }
num-rational = { workspace = true, features = ["std"] }
num-bigint = { workspace = true, features = ["std"] }
num-traits = { workspace = true, features = ["std"] }
smallvec.workspace = true
rustc-hash = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
rand.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "opt_benchmarks"
harness = false
