[package]
name = "oxiz-proof"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proof generation and checking for OxiZ SMT solver"
keywords = ["smt", "proof", "drat", "alethe", "verification"]
categories = ["algorithms", "development-tools::testing"]

[dependencies]
oxiz-core = { workspace = true, features = ["std"] }
smallvec.workspace = true
rustc-hash = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
regex = "1.12"
num-rational = { workspace = true, features = ["std"] }
num-bigint = { workspace = true, features = ["std"] }
num-traits = { workspace = true, features = ["std"] }
oxiz-sat = { workspace = true, optional = true, features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
sat-integration = ["oxiz-sat"]
serde = ["dep:serde", "smallvec/serde"]
profiling = ["oxiz-core/profiling"]

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "proof_benchmarks"
harness = false
