[package]
name = "oxiz-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for OxiZ SMT Solver"
keywords = ["smt", "solver", "python", "pyo3", "bindings"]
categories = ["algorithms", "science", "api-bindings"]

[lints]
workspace = true

[lib]
name = "oxiz"
crate-type = ["cdylib"]
doc = false

[dependencies]
oxiz = { workspace = true, features = ["full"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
num-bigint = { workspace = true, features = ["std"] }
num-rational = { workspace = true, features = ["std"] }
num-traits = { workspace = true }
