[package]
name = "oxiz-sat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance CDCL SAT Solver for OxiZ"
keywords = ["sat", "cdcl", "solver"]
categories = ["algorithms"]

[features]
default = ["std"]
std = ["rayon", "tracing", "rustc-hash/std", "oxiz-core/std"]
# Enable verbose debug output in conflict analysis
analyze-debug = []
# GPU acceleration backends (placeholder for future implementation)
cuda = []
opencl = []
vulkan = []

[dependencies]
oxiz-core = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false, optional = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true, optional = true }
hashbrown.workspace = true
portable-atomic-util = { workspace = true }
libm.workspace = true

[dev-dependencies]
proptest = { workspace = true }

# Profile-Guided Optimization (PGO) Configuration
#
# To use PGO for maximum performance:
#
# 1. Build with instrumentation:
#    RUSTFLAGS="-Cprofile-generate=/tmp/pgo-data" cargo build --release
#
# 2. Run representative workload to generate profile data:
#    ./target/release/oxiz-sat <your-benchmark-files>
#
# 3. Merge profile data:
#    llvm-profdata merge -o /tmp/pgo-data/merged.profdata /tmp/pgo-data
#
# 4. Build with PGO:
#    RUSTFLAGS="-Cprofile-use=/tmp/pgo-data/merged.profdata -Cllvm-args=-pgo-warn-missing-function" cargo build --release
#
# For SIMD optimizations, use:
#    RUSTFLAGS="-C target-cpu=native" cargo build --release
