[package]
name = "oxiz-solver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Main CDCL(T) Solver API for OxiZ"
keywords = ["smt", "solver", "cdcl"]
categories = ["algorithms"]

[dependencies]
oxiz-core = { workspace = true, default-features = false }
oxiz-sat = { workspace = true, default-features = false }
oxiz-theories = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false, optional = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
num-bigint = { workspace = true, default-features = false }
num-rational = { workspace = true, default-features = false, features = ["num-bigint"] }
num-traits = { workspace = true, default-features = false }
hashbrown.workspace = true
portable-atomic-util = { workspace = true }

# Optional (std-only)
rayon = { workspace = true, optional = true }
oxiz-proof = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "oxiz-core/std",
    "oxiz-sat/std",
    "oxiz-theories/std",
    "rayon",
    "tracing",
    "tracing/std",
    "num-bigint/std",
    "num-rational/std",
    "num-traits/std",
    "rustc-hash/std",
    "oxiz-proof",
]
parallel-theories = ["rayon"]
property-tests = []

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "solver_benchmarks"
harness = false
