[package]
name = "oxiz-spacer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Property Directed Reachability (PDR/IC3) engine for OxiZ - Horn clause solving"
keywords = ["smt", "pdr", "ic3", "horn", "verification"]
categories = ["algorithms", "development-tools::testing"]

[dependencies]
oxiz-core = { workspace = true, features = ["std"] }
oxiz-solver = { workspace = true, features = ["std"] }
smallvec.workspace = true
rustc-hash = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["std"] }
indexmap = { workspace = true, features = ["std"] }
num-bigint = { workspace = true, features = ["std"] }
num-rational = { workspace = true, features = ["std"] }

[dev-dependencies]
proptest.workspace = true
