[package]
name = "oxiz-theories"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Theory Solvers (EUF, Arithmetic, BitVectors) for OxiZ"
keywords = ["smt", "theories", "euf", "arithmetic"]
categories = ["algorithms", "mathematics"]

[dependencies]
oxiz-core = { workspace = true, default-features = false }
oxiz-sat = { workspace = true, default-features = false }
oxiz-math = { workspace = true, default-features = false }
tracing = { workspace = true, default-features = false, optional = true }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
num-rational = { workspace = true, default-features = false, features = ["num-bigint"] }
num-bigint = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }
hashbrown.workspace = true
portable-atomic-util = { workspace = true }

# Optional (std-only)
egg = { workspace = true, optional = true }
oxiz-nlsat = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "oxiz-core/std",
    "oxiz-sat/std",
    "oxiz-math/std",
    "egg",
    "oxiz-nlsat",
    "tracing",
    "tracing/std",
    "num-rational/std",
    "num-bigint/std",
    "num-traits/std",
    "rustc-hash/std",
]
profiling = ["std", "oxiz-core/profiling", "oxiz-sat/profiling"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "simplex_benchmarks"
harness = false
