[package]
name = "oxiz"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Next-Generation SMT Solver in Pure Rust"
keywords = ["smt", "solver", "sat", "verification", "logic"]
categories = ["algorithms", "science", "mathematics"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core modules - always included (no_std compatible, std propagated via features)
oxiz-core = { workspace = true }
oxiz-math = { workspace = true }
oxiz-sat = { workspace = true }
oxiz-theories = { workspace = true }
oxiz-solver = { workspace = true }
num-bigint = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }

# Advanced (optional, require std)
oxiz-nlsat = { workspace = true, optional = true }
oxiz-opt = { workspace = true, optional = true }
oxiz-spacer = { workspace = true, optional = true }
oxiz-proof = { workspace = true, optional = true }

[dev-dependencies]
num-bigint = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "oxiz-core/std",
    "oxiz-math/std",
    "oxiz-sat/std",
    "oxiz-theories/std",
    "oxiz-solver/std",
]
nlsat = ["dep:oxiz-nlsat", "std"]
optimization = ["dep:oxiz-opt", "std"]
spacer = ["dep:oxiz-spacer", "std"]
proof = ["dep:oxiz-proof", "std"]
standard = ["nlsat", "optimization", "proof"]
full = ["standard", "spacer"]
