[package]
name = "bench-regression"
version = "0.2.1"
edition = "2024"
publish = false
description = "Performance regression testing for OxiZ SMT solver"

[[bin]]
name = "regression"
path = "src/main.rs"

[dependencies]
# OxiZ crates
oxiz-core = { workspace = true, features = ["std"] }
oxiz-sat = { workspace = true, features = ["std"] }
oxiz-solver = { workspace = true, features = ["std"] }
oxiz-theories = { workspace = true, features = ["std"] }
oxiz-opt.workspace = true
oxiz-smtcomp = { path = "../../oxiz-smtcomp" }

# Benchmarking
criterion.workspace = true

# Utilities
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
num-bigint.workspace = true
tempfile.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "oxiz_benchmarks"
harness = false
path = "benches/oxiz_benchmarks.rs"

[lints.rust]
unused_variables = "allow"
dead_code = "allow"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
