[package]
name = "oxiz-z3-parity"
version = "0.1.3"
edition = "2024"
publish = false

[workspace]
# This is a standalone crate, not part of the main workspace

[dependencies]
oxiz = { path = "../../oxiz" }
oxiz-solver = { path = "../../oxiz-solver" }
oxiz-core = { path = "../../oxiz-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.10"
colored = "2.1"
tabled = "0.17"

[dev-dependencies]
tempfile = "3.0"
